Assignment: Event and tracking api, domain and routing controller.